name:               aip-post
version:            0.0.1
license:            BSD3
license-file:       LICENCE
author:             Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
maintainer:         Queensland Functional Programming Lab <oᴉ˙ldɟb@llǝʞsɐɥ>
copyright:          Copyright (c) 2017, Commonwealth Scientific and Industrial Research Organisation (CSIRO) ABN 41 687 119 230.
synopsis:           Aeronautical Information Package (AIP)
category:           Data, Aviation
description:       
  <<http://i.imgur.com/uZnp9ke.png>>
  .
  Post-processing of the airservices Aeronautical Information Package (AIP).
homepage:           https://github.com/qfpl/aip-post
bug-reports:        https://github.com/qfpl/aip-post/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:qfpl/aip-post.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , HTTP >= 4000 && < 5000
                    , network-uri >= 2.6 && < 3
                    , tagsoup >= 0.13 && < 0.15
                    , tagsoup-selection >= 0.1 && < 0.2
                    , transformers >= 0.5 && < 0.6
                    , parsers >= 0.12 && < 0.13
                    , parsec >= 3.1 && < 3.2
                    , digit >= 0.2 && < 0.3
                    , bytestring >= 0.10 && < 0.11
                    , filepath >= 1.4 && < 1.5
                    , directory >= 1.3 && < 1.4
                    , lens >= 4 && < 5
                    , papa >= 0.3 && < 0.4
                    , aip
                    , exitcode >= 0.1.0.0 && < 1.0
                    , process
                    
  ghc-options:
                    -Wall

  default-extensions:
  
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Data.Aviation.Aip.Post

executable          aip
  main-is:
                    Main.hs

  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5
                    , HTTP >= 4000 && < 5000
                    , network-uri >= 2.6 && < 3
                    , tagsoup >= 0.13 && < 0.15
                    , tagsoup-selection >= 0.1 && < 0.2
                    , transformers >= 0.5 && < 0.6
                    , parsers >= 0.12 && < 0.13
                    , parsec >= 3.1 && < 3.2
                    , digit >= 0.2 && < 0.3
                    , bytestring >= 0.10 && < 0.11
                    , filepath >= 1.4 && < 1.5
                    , directory >= 1.3 && < 1.4
                    , lens >= 4 && < 5
                    , papa >= 0.3 && < 0.4

  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8
                    , parsec >= 3.1
                    , quickcheck-text

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
